Fixing layout issues

--- a/src/client/scss/card-grid.scss
+++ b/src/client/scss/card-grid.scss
@@ -11,10 +11,8 @@
   flex-basis: 100%;
 }
 
-.card-grid__filter-row {
-    flex-direction: row;
-    flex-basis: 100%;
-    margin: $spacing-unit * 2;
+.card-grid__card-grid-row {
+  flex-basis: 100%;
 }
 
 .card-grid__card-item {
@@ -35,10 +33,8 @@
   }
 }
 
-.card-grid__no-cards-warning {
-    width: 100%;
-}
-
+.card-grid__no-cards-warning,
 .card-grid__no-results-warning {
-    width: 100%;
+  margin-top: $spacing-unit * 3;
+  width: 100%;
 }
